compiler/kernc_cli/tests/soundness/run-pass/const_generics/impl_where_clause_substitutes_const_arguments.kn
// class: const-generic-bounds
// source: impl where-clause proof search must substitute const arguments through the impl head
// exit: 0

trait Ready[N: usize] {
    fn value() i32;
};

trait Needs[N: usize] {
    fn get() i32;
};

struct Box[N: usize] {};

impl Box[2]: Ready[2] {
    fn value() i32 {
        return 7;
    }
}

impl[N: usize] Box[N]: Needs[N]
    where Box[N]: Ready[N],
{
    fn get() i32 {
        return self.value();
    }
}

fn main() i32 {
    return Box[2].{}.get() - 7;
}
